# coordination_number_cuda

./: .gitignore  CMakeLists.txt  common.cpp  common.h  gpu_kernel.cu  gpu_kernel.h  hip_defines.h  test.cpp
